tests/baselines/reference/parserComputedPropertyName2.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName2.ts(1,11): error TS9002: Computed property names are not currently supported.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName2.ts (1 errors) ====
    var v = { [e]: 1 };
              ~~~
!!! error TS9002: Computed property names are not currently supported.